tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved ody to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask Ody to do anything

  kimi/deepseek-chat
