tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__guardian_approved_request_permissions_renders_request_summary.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



✔ Request approved for permission request: Need write access for generated
  report assets.

• Working (0s • esc to interrupt)


› Ask Ody to do anything

  kimi/deepseek-chat
