tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2920
expression: popup
---
  Select a model
  type to search
  Warning: OpenAI base URL is overridden to https://api.moonshot.ai/v1. Select
  ↑↓ model · ←→ page · / thinking · Enter apply · Esc cancel · Tab/Shift+Tab p

  All  [test]


› test-visible-model ← current  test-visible-model description

  Thinking  (/ to toggle)   [ Always on ]
